[DEV] Add first unit tests for Parser.c
ceedling verbosity[4] test:path[parser]
ceedling verbosity[4] gcov:path[parser]

gdb build/test/out/test_Parser_XXX.out
strace build/test/out/test_Parser_XXX.out

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,6 +1,6 @@
 ##
 # docker build -t  mmstreamer-image ci/
-# docker run -it -u $(id -u) --rm -v $(pwd):/workdir mmstreamer-image:latest
+# docker run --privileged -it -u $(id -u) --rm -v $(pwd):/workdir mmstreamer-image:latest
 ##
 
 # Download base image ubuntu 16.04
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get -y upgrade && apt-get install -y \
         libxext-dev \
         openssh-server \
         ruby \
+        strace \
         tree \
         valgrind \
         vim \
