[DEV] Also print valgrind's output when running ceedling + fix leaks in tests

--- a/project.yml
+++ b/project.yml
@@ -73,6 +73,7 @@
     - stdout_pretty_tests_report
     - module_generator
     - raw_output_report
+    - command_hooks
 
 :tools_test_compiler:
   :executable: gcc
@@ -92,5 +93,16 @@
   :arguments:
     - -Lout/staging/lib -Wl,-rpath,out/staging/lib
     - -lexpat
+
+:tools:
+  :pre_test_fixture_execute:
+    :executable: valgrind
+    :arguments:
+      - --track-origins=yes
+      - --leak-check=full
+      - --show-leak-kinds=all
+      - --errors-for-leak-kinds=all
+      - --error-exitcode=10
+      - ${1}
 
 ...
