[DEV] Allow to run the application inside docker container
One additional package was required:
- libgl1-mesa-dev

Other added packages are for debugging/testing purpose:
- glmark2:  OpenGL (ES) 2.0 benchmark suite
- lshw:     List hardware
- x11-apps: Miscellaneous assortment of X applications that ship with
            the X Window System

For example, once inside the docker container:

1- Running "lshw -c video" should give something like:

  *-display
       description: 3D controller
       product: GF117M [GeForce 610M/710M/810M/820M / GT 620M/625M/630M/720M]
       vendor: NVIDIA Corporation
       physical id: 0
       bus info: pci@0000:01:00.0
       version: a1
       width: 64 bits
       clock: 33MHz
       capabilities: pm msi pciexpress bus_master cap_list rom
       configuration: driver=nouveau latency=0
       resources: irq:28 memory:d2000000-d2ffffff memory:a0000000-afffffff memory:b0000000-b1ffffff ioport:3000(size=128) memory:b2000000-b207ffff
  *-display
       description: VGA compatible controller
       product: 3rd Gen Core processor Graphics Controller
       vendor: Intel Corporation
       physical id: 2
       bus info: pci@0000:00:02.0
       version: 09
       width: 64 bits
       clock: 33MHz
       capabilities: msi pm vga_controller bus_master cap_list rom
       configuration: driver=i915 latency=0
       resources: irq:27 memory:d3000000-d33fffff memory:c0000000-cfffffff ioport:4000(size=64)

2- Run "glmark2" to test the OpenGL driver

3- Run "xclock" to test communication with the X-Server

Note: For now, only steps to test the application on top of X-server
      are provided. Wayland will be tested asap.

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -17,12 +17,15 @@ RUN apt-get update && apt-get -y upgrade && apt-get install -y \
         cppcheck \
         ctags \
         git \
+        glmark2 \
+        libgl1-mesa-dev \
         libgl1-mesa-glx \
         libjpeg8-dev \
         libpng16-dev \
         libv4l-dev \
         libx11-dev \
         libxext-dev \
+        lshw \
         openssh-server \
         python3-pip \
         ruby \
@@ -30,6 +33,7 @@ RUN apt-get update && apt-get -y upgrade && apt-get install -y \
         tree \
         valgrind \
         vim \
+        x11-apps \
         zlib1g-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
